fix: Layout on small breakpoints

--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -8,23 +8,14 @@
   display: grid;
   grid-template-columns: 300px minmax(0, 1fr);
   width: 100%;
+
+  @media screen and (max-width: 760px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .content {
   padding: 2rem;
-}
-
-@media (max-width: 760px) {
-  .layout {
-    display: block;
-  }
-}
-
-@media screen and (max-width: 1240px) {
-  .layout {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
 }
 
 .hideOnDesktop {
